# rikazinha

./: Cargo.toml
src/: error.rs  main.rs  startup.rs
src/commands/: mod.rs
src/commands/fun/: avatar.rs
src/commands/osu/: embeds.rs  mod.rs  profile.rs  recent.rs
src/messages/: mod.rs  timestamps.rs
src/utils/: env.rs
